# taskrunner

./: .gitignore  .tasks.json  .tasks.yaml  LICENSE  README.md  TODO.txt  Task.py  actions.py  common.py  config.py  logTools.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  schemas.py  settings.md  setup.cfg  task  task.py  tasks.py  tr.py  venv.inc.sh
.github/scripts/: run_test.sh  setup.sh
.github/workflows/: test-with-package.yml  test.yml  test_mac.yml
example/: task_runner.json  tasks.json
schemas/: taskrunner_4_2.json  taskrunner_4_3.json  taskrunner_4_4.json  taskrunner_v0.11.json  taskrunner_v0.7.json  taskrunner_v0.9.json
src/: Task.py  __init__.py  actions.py  logTools.py
src/tr/: Task.py  __init__.py  __main__.py  actions.py  common.py  config.py  schemas.py
test/: 006_bash_multi_cmds_allow_fail.expected  022_workdir_taskroot.expected  023_def_expansion.expected  024_def_expansion_env.expected  025_env_whitespace.expected  050_contaier_env.expected  050_container_ubuntu.expected  051_container_rocky.expected  060_info.expected  061_dump.expected  base_tasks_a.json  base_tasks_b.json  global_tasks.json  tasks.json  tr_test  tr_test.py
test/aux/: check_cwd.sh  tasks-for-list.json
tests/: 010_list_tasks.expected  015a_env_inherit.expected  015b_env_no_inherit.expected  030_args_handling.expected  031_args_override.expected  033_task_vars.expected  033b_task_vars.expected  040_config_file_include_defs.expected  042_included.expected  050_container_ubuntu.expected  051_container_rocky.expected  052_container_no_inherit.expected  060_info.expected  061_dump.expected  080_recursive_fail.expected  base_tasks_a.json  base_tasks_b.json  diff_test_output.sh  run_pkg_tests  runtests  tasks-for-list.json  tasks.json  tasks.yaml  test_output.sh  test_pkg.sh  tr_test  tr_test.py  update_test_output.sh  xeet.json
tests/aux/: tasks-for-list.json  volume_file.txt
tests/aux2/: volume_file.txt
tests/for_list_test/: tasks-for-list-include.json  tasks-for-list.json
tests/github/: run_test.sh  setup.sh
tests/pkg/: run_test.sh  tasks.json
tests/scripts/: check_cwd.sh  common.inc.sh  devel_common.inc.sh  dflt_output_compare.sh  diff_test_output.sh  runtests  test_output.sh  test_pkg.sh  update_test_output.sh
tests/volumes/vol0/: volume_file.txt
tests/volumes/vol1/: volume_file.txt
tests/volumes/volume0/: volume_file.txt
tests/volumes/volume1/: volume_file.txt
tests/xeet.expected/: do.sh
tests/xeet.expected/003_stop_on_error/: stdout
tests/xeet.expected/010_list_tasks/: stdout
tests/xeet.expected/020c_workdir_opt/: stdout
tests/xeet.expected/024_var_expansion_env/: stdout
tests/xeet.expected/025_env_whitespace/: stdout
tests/xeet.expected/032_args_var_override/: stdout
tests/xeet.expected/033_task_vars/: stdout
tests/xeet.expected/033b_task_vars/: stdout
tests/xeet.expected/033c_task_vars_no_inherit/: stdout
tests/xeet.expected/043d_cmds_inherit_ignore/: stdout
tests/xeet.expected/043e_cmds_inherit_depth_2/: stdout
tests/xeet.expected/050_container_ubuntu/: stdout
tests/xeet.expected/050b_container_rocky/: stdout
tests/xeet.expected/051_container_no_inherit/: stdout
tests/xeet.expected/051_container_rocky/: stdout
tests/xeet.expected/052_container_no_inherit/: stdout
tests/xeet.expected/060_info/: stdout
tests/xeet.expected/061_dump/: stdout
tests/xeet.expected/090a_pre_post/: stdout
tr/: Task.py  __init__.py  __main__.py  actions.py  common.py  config.py  logTools.py  schemas.py  taskrun.py
