[build-system]
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pytaskrunner"
dynamic = ["version"]
description = "Shell tasks managmement tool"
authors = [
    {name = "Omer Caspi", email = "omer.caspi@gmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
	"argcomplete>=2.0.0",
	"jsonschema>=3.2.0"
]
requires-python = ">=3.7,<4"

[project.urls]
"Homepage" = "https://github.com/omercsp/taskrunner"

[project.scripts]
task = "tr.__main__:main"

[tool.setuptools]
packages = ["tr"]
package-dir = {'' = "src"}

[tool.setuptools_scm]
local_scheme = "dirty-tag"
