[metadata]
name = pytaskrunner
version = attr: tr.__VERSION__
description = Shell tasks managmement tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omercsp/taskrunner
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include = tr
exclude = tests
install_requires =
	argcomplete>=2.0.0
	jsonschema>=3.2.0
python_requires = >=3.6,<4

[options.entry_points]
console_scripts=
    task = tr.taskrun:task_runner_main
